<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!--
      Maven groupId (com.qqzeng) 与 Java 包名 (com.qqzeng.qzdb) 一致。
      已通过 qqzeng.com 域名所有权验证（central.sonatype.com 命名空间校验），
      与 .NET 端 Qzdb 包及 QQZeng 作者品牌对齐。
    -->
    <groupId>com.qqzeng</groupId>
    <artifactId>qzdb</artifactId>
    <version>1.0.9</version>
    <packaging>jar</packaging>

    <name>QZDB Java SDK</name>
    <description>High-performance offline QZDB IP geolocation database reader (v2.4 API: com.qqzeng.qzdb.QzdbReader). Pure Java, zero runtime dependencies, supports IPv4/IPv6 dual-stack.</description>
    <url>https://github.com/zengzhan/qqzeng-ip</url>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://opensource.org/licenses/MIT</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>zengzhan</id>
            <name>zengzhan</name>
            <url>https://github.com/zengzhan</url>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/zengzhan/qqzeng-ip.git</connection>
        <developerConnection>scm:git:git@github.com:zengzhan/qqzeng-ip.git</developerConnection>
        <url>https://github.com/zengzhan/qqzeng-ip</url>
    </scm>

    <properties>
        <!--
          字节码基线刻意保持在 17：record / sealed / switch 表达式已够用，
          17 是在用最广的 LTS 基线，同一份产物可跑 17/21/25/26/27。
          不要因为 JDK 27 发布就抬基线——Java 27 的语言新特性全是 preview，
          预览字节码不允许进 Maven Central 发布包。
        -->
        <maven.compiler.release>17</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!-- 仅供 mvn test 使用；test scope 不进入消费者的依赖图 -->
        <junit.version>5.11.4</junit.version>
    </properties>

    <!--
      唯一的 test 依赖。刻意保持 runtime 依赖为零：JUnit 只用于
      数据无关用例（src/test/java/.../DataFreeCases.java + DataFreeUnitTest.java），
      test scope 不会出现在消费者的依赖图中。
    -->
    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <sourceDirectory>src/main/java</sourceDirectory>
        <testSourceDirectory>src/test/java</testSourceDirectory>
        <finalName>qzdb</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
            </plugin>
            <!--
              jar manifest 补 Automatic-Module-Name：让本包在 JPMS 模块路径上有一个稳定的
              自动模块名。不写的话模块名由文件名推导，产物改名（或下游用 shaded jar）即破坏
              下游的 module 声明。零风险；刻意不引入 module-info.java——那会牵动测试源
              与用户侧的模块路径。
            -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.5.0</version>
                <configuration>
                    <archive>
                        <manifestEntries>
                            <Automatic-Module-Name>com.qqzeng.qzdb</Automatic-Module-Name>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <!--
              surefire 只跑 JUnit 5 用例（src/test/java/.../*UnitTest.java）。
              其余 4 个类是 main 驱动的分层 harness：依赖私有 test_data_202608/ 数据
              与裸 javac classpath（无 JUnit），由 ip-qzdb-sdk/run_all_tests.sh 驱动，
              必须显式排除——其中 QzdbReaderTest / FailClosedHostileTest 名字
              恰好命中 surefire 默认的 **/*Test.java，不排除会被当成空测试类抓进来。
            -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <excludes>
                        <exclude>**/QzdbReaderTest.java</exclude>
                        <exclude>**/FailClosedHostileTest.java</exclude>
                        <exclude>**/FullAccuracyAndPerfTester.java</exclude>
                        <exclude>**/DualStackBenchmark.java</exclude>
                    </excludes>
                </configuration>
            </plugin>
            <!--
              Central Publishing 插件（替代已退役的 OSSRH）。
              仅在 `mvn deploy` 时介入，将构件发布到 Maven Central。
              凭证通过 settings.xml (serverId=central) 读取。
            -->
            <plugin>
                <groupId>org.sonatype.central</groupId>
                <artifactId>central-publishing-maven-plugin</artifactId>
                <version>0.11.0</version>
                <extensions>true</extensions>
                <configuration>
                    <publishingServerId>central</publishingServerId>
                    <autoPublish>true</autoPublish>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <!--
      发布专用 profile：附加 -sources.jar / -javadoc.jar 并做 GPG 签名。
      Central 要求每个构件必须带 sources、javadoc、GPG 签名，故发布时必须激活：
          mvn -Ppublish-central -Dgpg.passphrase=*** deploy
      未激活此 profile 时（常规构建）不会签名，也不产出 sources/javadoc，便于本地开发。
    -->
    <profiles>
        <profile>
            <id>publish-central</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>3.3.1</version>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals>
                                    <goal>jar-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.11.1</version>
                        <configuration>
                            <doclint>none</doclint>
                        </configuration>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>3.2.4</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <gpgArguments>
                                <arg>--pinentry-mode</arg>
                                <arg>loopback</arg>
                            </gpgArguments>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
